Coverity analysis defect 116664: Uninitialized scalar field

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Uninitialized scalar field

      The field will contain an arbitrary value left over from earlier computations. A scalar field is not initialized by the constructor
      /src/mongo/s/catalog/type_database.h:114: UNINIT_CTOR 116664 The compiler-generated constructor for this class does not initialize "_sharded".

            Assignee:
            Sergi Mateo Bellido
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: