SERVER-52920 Coverity analysis defect 116664: Uninitialized scalar field