src/mongo/s/catalog/type_database.h
@@ -111,7 +111,7 @@ public:
 private:
     std::string _name;
     ShardId _primary;
-    bool _sharded;
+    bool _sharded{false};
     DatabaseVersion _version;
 };
 
